Update DistanceServiceTest.java